--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 /Java/Lección02/Enumeraciones/build/
 /Java/Lección02/BloquesInicializacion/nbproject/private/
 /Java/Lección02/BloquesInicializacion/build/
+/Java/Lección03/ForEach/nbproject/private/
+/Java/Lección03/ForEach/build/
+/Java/Lección03/AutoboxingUnboxing/nbproject/private/
+/Java/Lección03/AutoboxingUnboxing/build/
+/Java/Lección03/ModificadoresAcceso/nbproject/private/
+/Java/Lección03/ModificadoresAcceso/build/
