--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@
 /Java/Lección03/AutoboxingUnboxing/build/
 /Java/Lección03/ModificadoresAcceso/nbproject/private/
 /Java/Lección03/ModificadoresAcceso/build/
+/Java/Lección04/Sobreescritura/nbproject/private/
+/Java/Lección04/Sobreescritura/build/
+/Java/Lección04/InstanceOf/nbproject/private/
+/Java/Lección04/InstanceOf/build/
+/Tareas/Ejercicios Java/Ejercicio1/nbproject/private/
+/Tareas/Ejercicios Java/Ejercicios/nbproject/private/
+/Tareas/Ejercicios Java/Ejercicios/build/
