--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@
 /Tareas/Ejercicios Java/Ejercicio1/nbproject/private/
 /Tareas/Ejercicios Java/Ejercicios/nbproject/private/
 /Tareas/Ejercicios Java/Ejercicios/build/
+/Java/Lección05/ConversionObjetos/nbproject/private/
+/Java/Lección05/ConversionObjetos/build/
+/Java/Lección05/ClaseObject/nbproject/private/
+/Java/Lección05/ClasesAbstractas/nbproject/private/
+/Java/Lección05/ClasesAbstractas/build/
