--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /Java/Lección05/ClaseObject/nbproject/private/
 /Java/Lección05/ClasesAbstractas/nbproject/private/
 /Java/Lección05/ClasesAbstractas/build/
+/Java/Lección06/Interfaces/nbproject/private/
+/Java/Lección06/Interfaces/build/
