--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@
 /Java/Lección05/ClasesAbstractas/build/
 /Java/Lección06/Interfaces/nbproject/private/
 /Java/Lección06/Interfaces/build/
+/Java/Lección07/JavaBeans/nbproject/private/
+/Java/Lección07/JavaBeans/build/
+/Java/Lección08/ManejoExcepciones1/nbproject/private/
+/Java/Lección08/ManejoExcepciones1/build/
